# SkullRegistration

./: README.md
AS Callibration Data/: 2019-02-08-Scene.mrml  Image_Image.nrrd  Sequence_1.seq.mha  StylusTip_Stylus.h5  StylusToProbe.h5
Collected Data/: 2019-02-08-Scene.mrml  ImageToReference.h5  ImageToReference_1.h5  Image_Image.nrrd  Image_Image_1.nrrd  Image_Reference.nrrd  Image_Reference_1.nrrd  Sequence_1.seq.mha
Config/: DataCollection.xml  DataCollection_SkullReference.xml  DataCollection_SkullReference_WithWebcam.xml  StylusProbe.ttp
Extension/: CMakeLists.txt
Extension/AutomaticSurfacePointPlacement/: AutomaticSurfacePointPlacement.py
Extension/USRegistration/: USRegistration.py
Extension/USRegistration/Resources/StyleSheets/: USRegistrationStyle.qss
Extension/USRegistration/Resources/Transforms/: ImageToProbe.h5
Extension/USRegistration/Resources/UI/: USRegistration.ui
Modules/AutomaticSurfacePointPlacement/: CMakeLists.txt
Modules/AutomaticSurfacePointPlacement/AutomaticSurfacePointPlacement/: AutomaticSurfacePointPlacement.py
Modules/AutomaticSurfacePointPlacement/AutomaticSurfacePointPlacement/Resources/UI/: AutomaticSurfacePointPlacement.ui
Notebooks/: AutomaticSegmentation.ipynb  FiducialPlacement.ipynb  FullSequenceExportation.ipynb  SequenceExportation.ipynb
Practice Calibration/Finished Pivot Callibration/: 2019-02-08-Scene.mrml  Image_Image.nrrd  StylusTip_Stylus.h5
Practice Calibration/US Calliubration Data/: StylusTip_Stylus.h5
Practice Callibration/: DataCollection.xml  ProbeCalibration.xml  StylusProbe.ttp
Practice Callibration/Finished Pivot Callibration/: 2019-02-08-Scene.mrml  StylusToProbe.h5
Practice Callibration/US Calliubration Data/: 2019-02-08-Scene.mrml  StylusToProbe.h5
Ready To Record/: Displacement to color.txt  ImageToReference.h5  Image_Image_1.nrrd  Image_Reference.nrrd  StylusTip_Stylus_1.h5  StylusToProbe_1.h5
Ready To Record With Webcam_Linear Probe/: 2019-02-08-Scene.mrml  Displacement to color.txt  ImageToReference.h5  Image_Image.nrrd  Image_Reference.nrrd  ReferenceToInitial.h5  StylusTip_Stylus.h5  StylusTip_Stylus_1.h5  StylusToProbe.h5  StylusToProbe_1.h5  Surface_Points_Initial.fcsv  Webcam_Webcam.nrrd
Ready To Record_Linear Probe/: 2019-02-08-Scene.mrml  Displacement to color.txt  Image_Image.nrrd  StylusTip_Stylus.h5  StylusToProbe.h5
SlicerScenes/ReadyToRecord/: 2019-02-08-Scene.mrml  ImageToReference.h5  Image_Reference.nrrd
config/: ProbeCalibration.xml  SkullReference.ttp
extensions/AutomaticSurfacePointPlacement/: AutomaticSurfacePointPlacement.py  CMakeLists.txt
extensions/USRegistration/: CMakeLists.txt  USRegistration.py
extensions/USRegistration/Resources/StyleSheets/: USRegistrationStyle.qss
extensions/USRegistration/Resources/UI/: USRegistration.ui
